Implemented tests for the LanguageController class and added missing Checkstyle