@@ -153,6 +153,9 @@ public class HomePageCtrl implements Initializable {
         String status = injector.getInstance(ServerUtils.class).deleteNote(note);
     }
 
+    /**
+     * Initializes the edit button
+     */
     public void initializeEdit() {
         isEditText = true;
         editButton.setText(lc.getEditText());
@@ -182,9 +185,13 @@ public class HomePageCtrl implements Initializable {
         });
     }
 
+    /**
+     * loads a certain language on changing the value in the ComboBox
+     * @param actionEvent additional event data
+     */
     private void loadLanguage(ActionEvent actionEvent) {
         HBox flag = languageComboBox.getValue();
-        String language = hBox2Language(flag);
+        String language = hBox2Language();
 
         lc.loadLanguage(language);
 
@@ -194,12 +201,16 @@ public class HomePageCtrl implements Initializable {
             editButton.setText(lc.getSaveText());
     }
 
-    private String hBox2Language(HBox hBox){
+    /**
+     * Converts a given HBox from the ComboBox to the selected language
+     * @return the language String code
+     */
+    private String hBox2Language(){
         HBox selectedItem = languageComboBox.getSelectionModel().getSelectedItem();
 
         Image flag = null;
 
-        ImageView imageView = (ImageView) selectedItem.getChildren().get(0);
+        ImageView imageView = (ImageView) selectedItem.getChildren().getFirst();
         flag = imageView.getImage();
 
         int k = 0;
@@ -219,6 +230,9 @@ public class HomePageCtrl implements Initializable {
         return defaultLanguage;
     }
 
+    /**
+     * loads all the flags in the ComboBox
+     */
     private void loadAllFlags(){
 
         languageComboBox.getItems().addAll(
@@ -228,6 +242,11 @@ public class HomePageCtrl implements Initializable {
         );
     }
 
+    /**
+     * Creates a flag item from a given image used in the ComboBox
+     * @param image the Image to convert
+     * @return the created HBox item containing the ImageView
+     */
     private HBox createFlagItem(Image image) {
         ImageView imageView = new ImageView(image);
         imageView.setFitWidth(50);
@@ -235,7 +254,4 @@ public class HomePageCtrl implements Initializable {
 
         return new HBox(10, imageView);
     }
-
-
-
 }
